--- a/src/components/Mycss.css
+++ b/src/components/Mycss.css
@@ -1,16 +1,12 @@
 .centerAlign{
-    /* display: -webkit-flex; Safari */
-  -webkit-align-items: center; /* Safari 7.0+ */
-  /* display: flex; */
+  -webkit-align-items: center; 
   align-items: center;
   bottom: 50% !important;
 
 }
 
 .cardCenterAlign{
-    /* display: -webkit-flex; Safari */
-  -webkit-align-items: center; /* Safari 7.0+ */
-  /* display: flex; */
+  -webkit-align-items: center;
   align-items: center;
   bottom: 30% !important;
 
@@ -40,12 +36,8 @@
     margin-bottom: 2% !important;
 
 }
-<<<<<<< HEAD
 
-.myBackground{
-  background-color: #EAECEE;
-=======
-.ulfooter{
-    margin-bottom: 0% !important;   
->>>>>>> ff50664b1b8a7b828175581853a38f7c1a387684
+
+.footerLinkColor{
+  color: cyan
 }
