--- a/src/components/Mycss.css
+++ b/src/components/Mycss.css
@@ -41,3 +41,22 @@
 .footerLinkColor{
   color: cyan
 }
+
+.bookMargin{
+  font-family: 'Cinzel', serif !important;
+  color: midnightblue
+}
+
+/* .description{
+  margin-left: '20%' !important;
+} */
+
+.textField {
+  margin-left: '10%';
+  margin-right: '10%';
+}
+
+/* .confirm{
+  padding: '20%';
+  width: '50%'
+} */
