--- a/src/components/Mycss.css
+++ b/src/components/Mycss.css
@@ -1,22 +1,48 @@
 .centerAlign{
-  -webkit-align-items: center; 
-  align-items: center;
-  bottom: 50% !important;
-
+  /* -webkit-align-items: center; 
+  align-items: center; */
+  /* top: 50% !important; */
+  position: relative !important;
+  margin-top: 15%;
+  left: 0% !important;
 }
 
-.cardCenterAlign{
-  -webkit-align-items: center;
-  align-items: center;
-  bottom: 30% !important;
+.centerAlign2{
+  /* -webkit-align-items: center; 
+  align-items: center; */
+  top: 20% !important;
+  position: relative !important;
+  margin-top: 5%;
+  left: 0% !important;
+}
 
+.centerAlign3{
+  /* -webkit-align-items: center; 
+  align-items: center; */
+  /* top: 20% !important; */
+  position: relative !important;
+  margin-top: 9%;
+  left: 0% !important;
+}
+
+
+.cardCenterAlign{
+  /* -webkit-align-items: center;
+  align-items: center;
+  bottom: 30% !important; */
+  /* top: 20% !important; */
+  position: relative !important;
+  margin-top: 10%;
+  left: 0% !important;
 }
 
 
 .loginAlign{
-    top: 0%;
-    right: 0% !important;
-    left: 85% !important;
+     top: 0%;
+    /* right: 0% !important;
+    left: 85% !important;  */
+    position: relative !important;
+
 }
 
 .sidePannelul{
@@ -60,3 +86,23 @@
   padding: '20%';
   width: '50%'
 } */
+
+.main_page{
+  filter: brightness(50%);
+  /*width: 100%;
+  height: 700px;
+  object-fit: contain;*/
+/* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  position: fixed;
+  top: 0;
+  left: 0;
+
+}
