home page fixed

--- a/src/components/Mycss.css
+++ b/src/components/Mycss.css
@@ -59,8 +59,8 @@
 }
 
 .dropShift{
-    left: 159%;
-    margin-bottom: 2% !important;
+    /* left: 159%;
+    margin-bottom: 2% !important; */
 
 }
 
