--- a/src/components/Mycss.css
+++ b/src/components/Mycss.css
@@ -195,3 +195,15 @@ html {
    position: absolute;
    color: yellow;
 } */
+
+.search-bar-styles{
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    height: 100%;
+    border: hidden;
+    border-radius: 10px 0px 0px 10px;
+    padding-left: 15%;
+    padding-bottom: 1%;
+    padding-top: 1%
+}
